--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,16 @@ img {
   border-radius: 12px;
 }
 
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: #e3ddd7;
+}
+
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: flex-start;
   padding: 40px;
   gap: 40px;
@@ -62,7 +68,7 @@ img {
 .text-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: flex-start;
   gap: 32px;
   max-width: 656px;
@@ -105,17 +111,5 @@ img {
 .preparation h3 {
   font-size: 20px;
   font-weight: 600;
-  line-height: 100%;
   color: #7a284e;
-}
-
-.preparation ul {
-  display: flex;
-  flex-direction: column;
-  gap: 8px; /* Controls space between list items */
-  padding-left: 20px; /* Adjusts bullet indentation */
-  list-style-type: disc; /* Keeps classic bullets */
-  color: #5f564d; /* Matches text color */
-  font-size: 16px;
-  font-weight: 400;
 }
